Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Public/Generate/Export/UActorComponent.h

	DOTNET_EXPORT auto E_PROP_UActorComponent_bAllowAnyoneToDestroyMe_GET(UActorComponent* Ptr) { return Ptr->bAllowAnyoneToDestroyMe; }
	DOTNET_EXPORT void E_PROP_UActorComponent_bAllowAnyoneToDestroyMe_SET(UActorComponent* Ptr, uint8 Value) { Ptr->bAllowAnyoneToDestroyMe = Value; }
	
	DOTNET_EXPORT auto E_PROP_UActorComponent_bAllowConcurrentTick_GET(UActorComponent* Ptr) { return Ptr->bAllowConcurrentTick; }
	DOTNET_EXPORT void E_PROP_UActorComponent_bAllowConcurrentTick_SET(UActorComponent* Ptr, uint8 Value) { Ptr->bAllowConcurrentTick = Value; }
	
	DOTNET_EXPORT auto E_PROP_UActorComponent_bAutoActivate_GET(UActorComponent* Ptr) { return Ptr->bAutoActivate; }
	DOTNET_EXPORT void E_PROP_UActorComponent_bAutoActivate_SET(UActorComponent* Ptr, uint8 Value) { Ptr->bAutoActivate = Value; }
	
	DOTNET_EXPORT auto E_PROP_UActorComponent_bAutoRegister_GET(UActorComponent* Ptr) { return Ptr->bAutoRegister; }
	DOTNET_EXPORT void E_PROP_UActorComponent_bAutoRegister_SET(UActorComponent* Ptr, uint8 Value) { Ptr->bAutoRegister = Value; }
	
	DOTNET_EXPORT auto E_PROP_UActorComponent_bEditableWhenInherited_GET(UActorComponent* Ptr) { return Ptr->bEditableWhenInherited; }
	DOTNET_EXPORT void E_PROP_UActorComponent_bEditableWhenInherited_SET(UActorComponent* Ptr, uint8 Value) { Ptr->bEditableWhenInherited = Value; }
	
	DOTNET_EXPORT auto E_PROP_UActorComponent_bIsActive_GET(UActorComponent* Ptr) { return Ptr->bIsActive; }
	DOTNET_EXPORT void E_PROP_UActorComponent_bIsActive_SET(UActorComponent* Ptr, uint8 Value) { Ptr->bIsActive = Value; }
	
	DOTNET_EXPORT auto E_PROP_UActorComponent_bIsEditorOnly_GET(UActorComponent* Ptr) { return Ptr->bIsEditorOnly; }
	DOTNET_EXPORT void E_PROP_UActorComponent_bIsEditorOnly_SET(UActorComponent* Ptr, uint8 Value) { Ptr->bIsEditorOnly = Value; }
	
	DOTNET_EXPORT auto E_PROP_UActorComponent_bNavigationRelevant_GET(UActorComponent* Ptr) { return Ptr->bNavigationRelevant; }
	DOTNET_EXPORT void E_PROP_UActorComponent_bNavigationRelevant_SET(UActorComponent* Ptr, uint8 Value) { Ptr->bNavigationRelevant = Value; }
	
	DOTNET_EXPORT auto E_PROP_UActorComponent_bNeverNeedsRenderUpdate_GET(UActorComponent* Ptr) { return Ptr->bNeverNeedsRenderUpdate; }
	DOTNET_EXPORT void E_PROP_UActorComponent_bNeverNeedsRenderUpdate_SET(UActorComponent* Ptr, uint8 Value) { Ptr->bNeverNeedsRenderUpdate = Value; }
	
	DOTNET_EXPORT auto E_PROP_UActorComponent_bTickInEditor_GET(UActorComponent* Ptr) { return Ptr->bTickInEditor; }
	DOTNET_EXPORT void E_PROP_UActorComponent_bTickInEditor_SET(UActorComponent* Ptr, uint8 Value) { Ptr->bTickInEditor = Value; }
	
	DOTNET_EXPORT auto E_PROP_UActorComponent_bWantsBeginPlay_GET(UActorComponent* Ptr) { return Ptr->bWantsBeginPlay; }
	DOTNET_EXPORT void E_PROP_UActorComponent_bWantsBeginPlay_SET(UActorComponent* Ptr, uint8 Value) { Ptr->bWantsBeginPlay = Value; }
	
	DOTNET_EXPORT auto E_PROP_UActorComponent_bWantsInitializeComponent_GET(UActorComponent* Ptr) { return Ptr->bWantsInitializeComponent; }
	DOTNET_EXPORT void E_PROP_UActorComponent_bWantsInitializeComponent_SET(UActorComponent* Ptr, uint8 Value) { Ptr->bWantsInitializeComponent = Value; }
	
	DOTNET_EXPORT void E_EVENT_ADD_UActorComponent_OnComponentActivated(UActorComponent* Obj)
	{
		auto wrapper = NewObject<UManageEventSender>(UCoreShell::GetInstance());
		wrapper->ManageDelegateName = "InvokeEvent_OnComponentActivated";
		wrapper->SourceObject = Obj;
		Obj->OnComponentActivated.AddDynamic(wrapper, &UManageEventSender::Wrapper_FActorComponentActivatedSignature);
	}
	DOTNET_EXPORT void E_EVENT_DEL_UActorComponent_OnComponentActivated(UActorComponent* Obj)
	{
	}
	DOTNET_EXPORT void E_EVENT_ADD_UActorComponent_OnComponentDeactivated(UActorComponent* Obj)
	{
		auto wrapper = NewObject<UManageEventSender>(UCoreShell::GetInstance());
		wrapper->ManageDelegateName = "InvokeEvent_OnComponentDeactivated";
		wrapper->SourceObject = Obj;
		Obj->OnComponentDeactivated.AddDynamic(wrapper, &UManageEventSender::Wrapper_FActorComponentDeactivateSignature);
	}
	DOTNET_EXPORT void E_EVENT_DEL_UActorComponent_OnComponentDeactivated(UActorComponent* Obj)
	{
	}
	DOTNET_EXPORT auto E_PROP_UActorComponent_PrimaryComponentTick_GET(UActorComponent* Ptr) { return (INT_PTR)&(Ptr->PrimaryComponentTick); }
	DOTNET_EXPORT auto E_UActorComponent_Activate(UActorComponent* Self, bool bReset)
	{
		auto _p0 = bReset;
		Self->Activate(_p0);
	}
	DOTNET_EXPORT auto E_UActorComponent_AdditionalStatObject(UActorComponent* Self)
	{
		return ConvertToManage_ObjectPointerDescription(Self->AdditionalStatObject());
	}
	DOTNET_EXPORT auto E_UActorComponent_AddTickPrerequisiteActor(UActorComponent* Self, AActor* PrerequisiteActor)
	{
		auto _p0 = PrerequisiteActor;
		Self->AddTickPrerequisiteActor(_p0);
	}
	DOTNET_EXPORT auto E_UActorComponent_AddTickPrerequisiteComponent(UActorComponent* Self, UActorComponent* PrerequisiteComponent)
	{
		auto _p0 = PrerequisiteComponent;
		Self->AddTickPrerequisiteComponent(_p0);
	}
	DOTNET_EXPORT auto E_UActorComponent_AllowReregistration(UActorComponent* Self)
	{
		return Self->AllowReregistration();
	}
	DOTNET_EXPORT auto E_UActorComponent_ApplyWorldOffset(UActorComponent* Self, INT_PTR InOffset, bool bWorldShift)
	{
		auto& _p0 = *(FVector*)InOffset;
		auto _p1 = bWorldShift;
		Self->ApplyWorldOffset(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UActorComponent_BeginPlay(UActorComponent* Self)
	{
		Self->BeginPlay();
	}
	DOTNET_EXPORT auto E_UActorComponent_CanEverAffectNavigation(UActorComponent* Self)
	{
		return Self->CanEverAffectNavigation();
	}
	DOTNET_EXPORT auto E_UActorComponent_ClearNeedEndOfFrameUpdate(UActorComponent* Self)
	{
		Self->ClearNeedEndOfFrameUpdate();
	}
	DOTNET_EXPORT auto E_UActorComponent_ComponentHasTag(UActorComponent* Self, char* Tag)
	{
		auto _p0 = ConvertFromManage_FName(Tag);
		return Self->ComponentHasTag(_p0);
	}
	DOTNET_EXPORT auto E_UActorComponent_ComponentIsInPersistentLevel(UActorComponent* Self, bool bIncludeLevelStreamingPersistent)
	{
		auto _p0 = bIncludeLevelStreamingPersistent;
		return Self->ComponentIsInPersistentLevel(_p0);
	}
	DOTNET_EXPORT auto E_UActorComponent_CreatePhysicsState(UActorComponent* Self)
	{
		Self->CreatePhysicsState();
	}
	DOTNET_EXPORT auto E_UActorComponent_CreateRenderState_Concurrent(UActorComponent* Self)
	{
		((E_PROTECTED_WRAP_UActorComponent*)Self)->CreateRenderState_Concurrent_WRAP();
	}
	DOTNET_EXPORT auto E_UActorComponent_Deactivate(UActorComponent* Self)
	{
		Self->Deactivate();
	}
	DOTNET_EXPORT auto E_UActorComponent_DestroyComponent(UActorComponent* Self, bool bPromoteChildren)
	{
		auto _p0 = bPromoteChildren;
		Self->DestroyComponent(_p0);
	}
	DOTNET_EXPORT auto E_UActorComponent_DestroyPhysicsState(UActorComponent* Self)
	{
		Self->DestroyPhysicsState();
	}
	DOTNET_EXPORT auto E_UActorComponent_DestroyRenderState_Concurrent(UActorComponent* Self)
	{
		((E_PROTECTED_WRAP_UActorComponent*)Self)->DestroyRenderState_Concurrent_WRAP();
	}
	DOTNET_EXPORT auto E_UActorComponent_DetermineUCSModifiedProperties(UActorComponent* Self)
	{
		Self->DetermineUCSModifiedProperties();
	}
	DOTNET_EXPORT auto E_UActorComponent_ToggleActive(UActorComponent* Self)
	{
		Self->ToggleActive();
	}
	DOTNET_EXPORT auto E_UActorComponent_UninitializeComponent(UActorComponent* Self)
	{
		Self->UninitializeComponent();
	}
	DOTNET_EXPORT auto E_UActorComponent_UnregisterComponent(UActorComponent* Self)
	{
		Self->UnregisterComponent();
	}
	DOTNET_EXPORT auto E_UActorComponent_UpdateComponentToWorld(UActorComponent* Self, EUpdateTransformFlags UpdateTransformFlags, ETeleportType Teleport)
	{
		auto _p0 = UpdateTransformFlags;
		auto _p1 = Teleport;
		Self->UpdateComponentToWorld(_p0, _p1);
	}