Plugins/UnrealDotNet/Source/UnrealEngineSharp/Generate/Class/UActorComponent.cs

		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UActorComponent_ToggleActive(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UActorComponent_UninitializeComponent(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UActorComponent_UnregisterComponent(IntPtr self);
		
		[DllImport(NativeManager.UnrealDotNetDll, CallingConvention = CallingConvention.Cdecl)]
		private static extern void E_UActorComponent_UpdateComponentToWorld(IntPtr self, byte updateTransformFlags, byte teleport);
		
		#endregion
		
		#region Property
		
		/// <summary>
		/// <para>Can this component be destroyed (via K2_DestroyComponent) by any parent </para>
		/// </summary>
		public byte bAllowAnyoneToDestroyMe
		{
			get => E_PROP_UActorComponent_bAllowAnyoneToDestroyMe_GET(NativePointer);
			set => E_PROP_UActorComponent_bAllowAnyoneToDestroyMe_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Can we tick this concurrently on other threads? </para>
		/// </summary>
		public byte bAllowConcurrentTick
		{
			get => E_PROP_UActorComponent_bAllowConcurrentTick_GET(NativePointer);
			set => E_PROP_UActorComponent_bAllowConcurrentTick_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Whether the component is activated at creation or must be explicitly activated. </para>
		/// </summary>
		public byte bAutoActivate
		{
			get => E_PROP_UActorComponent_bAutoActivate_GET(NativePointer);
			set => E_PROP_UActorComponent_bAutoActivate_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Does this component automatically register with its owner </para>
		/// </summary>
		public byte bAutoRegister
		{
			get => E_PROP_UActorComponent_bAutoRegister_GET(NativePointer);
			set => E_PROP_UActorComponent_bAutoRegister_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>True if this component can be modified when it was inherited from a parent actor class </para>
		/// </summary>
		public byte bEditableWhenInherited
		{
			get => E_PROP_UActorComponent_bEditableWhenInherited_GET(NativePointer);
			set => E_PROP_UActorComponent_bEditableWhenInherited_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Whether the component is currently active. </para>
		/// </summary>
		public byte bIsActive
		{
			get => E_PROP_UActorComponent_bIsActive_GET(NativePointer);
			set => E_PROP_UActorComponent_bIsActive_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>If true, the component will be excluded from non-editor builds </para>
		/// </summary>
		public byte bIsEditorOnly
		{
			get => E_PROP_UActorComponent_bIsEditorOnly_GET(NativePointer);
			set => E_PROP_UActorComponent_bIsEditorOnly_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Cached navigation relevancy flag for collision updates </para>
		/// </summary>
		public byte bNavigationRelevant
		{
			get => E_PROP_UActorComponent_bNavigationRelevant_GET(NativePointer);
			set => E_PROP_UActorComponent_bNavigationRelevant_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>If true, this component never needs a render update. </para>
		/// </summary>
		public byte bNeverNeedsRenderUpdate
		{
			get => E_PROP_UActorComponent_bNeverNeedsRenderUpdate_GET(NativePointer);
			set => E_PROP_UActorComponent_bNeverNeedsRenderUpdate_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Should this component be ticked in the editor </para>
		/// </summary>
		public byte bTickInEditor
		{
			get => E_PROP_UActorComponent_bTickInEditor_GET(NativePointer);
			set => E_PROP_UActorComponent_bTickInEditor_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>If true, we call the virtual BeginPlay </para>
		/// </summary>
		public byte bWantsBeginPlay
		{
			get => E_PROP_UActorComponent_bWantsBeginPlay_GET(NativePointer);
			set => E_PROP_UActorComponent_bWantsBeginPlay_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>If true, we call the virtual InitializeComponent </para>
		/// </summary>
		public byte bWantsInitializeComponent
		{
			get => E_PROP_UActorComponent_bWantsInitializeComponent_GET(NativePointer);
			set => E_PROP_UActorComponent_bWantsInitializeComponent_SET(NativePointer, value);
		}

		
		/// <summary>
		/// <para>Main tick function for the Component </para>
		/// </summary>
		public FActorComponentTickFunction PrimaryComponentTick
		{
			get => E_PROP_UActorComponent_PrimaryComponentTick_GET(NativePointer);
		}

		#endregion
		
		#region Events
		
		/// <summary>
		/// <para>Called when the component has been activated, with parameter indicating if it was from a reset </para>
		/// </summary>
		public event FActorComponentActivatedSignature OnComponentActivated
		{
			add
			{
				E_EVENT_ADD_UActorComponent_OnComponentActivated(NativePointer);
				_Event_OnComponentActivated += value;
			}

			remove
			{
				E_EVENT_DEL_UActorComponent_OnComponentActivated(NativePointer);
				_Event_OnComponentActivated -= value;
			}

		}

		private event FActorComponentActivatedSignature _Event_OnComponentActivated;
		
		internal void InvokeEvent_OnComponentActivated(ObjectPointerDescription component, bool bReset)
		{
			_Event_OnComponentActivated?.Invoke(component, bReset);
		}

		
		/// <summary>
		/// <para>Called when the component has been deactivated </para>
		/// </summary>
		public event FActorComponentDeactivateSignature OnComponentDeactivated
		{
			add
			{
				E_EVENT_ADD_UActorComponent_OnComponentDeactivated(NativePointer);
				_Event_OnComponentDeactivated += value;
			}

			remove
			{
				E_EVENT_DEL_UActorComponent_OnComponentDeactivated(NativePointer);
				_Event_OnComponentDeactivated -= value;
			}

		}

		private event FActorComponentDeactivateSignature _Event_OnComponentDeactivated;
		
		internal void InvokeEvent_OnComponentDeactivated(ObjectPointerDescription component)
		{
			_Event_OnComponentDeactivated?.Invoke(component);
		}

		#endregion
		
		#region ExternMethods
		
		/// <summary>
		/// <para>Activates the SceneComponent, should be overridden by native child classes. </para>
		/// <param name="bReset">Whether the activation should happen even if ShouldActivate returns false. </param>
		/// </summary>
		public virtual void Activate(bool bReset)
			=> E_UActorComponent_Activate(this, bReset);
		
		
		/// <summary>
		/// <para>Give a readable name for this component, including asset name if applicable </para>
		/// </summary>
		public virtual UObject AdditionalStatObject()
			=> E_UActorComponent_AdditionalStatObject(this);
		
		
		/// <summary>
		/// <para>Make this component tick after PrerequisiteActor </para>
		/// </summary>
		public virtual void AddTickPrerequisiteActor(AActor prerequisiteActor)
			=> E_UActorComponent_AddTickPrerequisiteActor(this, prerequisiteActor);
		
		
		/// <summary>
		/// <para>Make this component tick after PrerequisiteComponent. </para>
		/// </summary>
		public virtual void AddTickPrerequisiteComponent(UActorComponent prerequisiteComponent)
			=> E_UActorComponent_AddTickPrerequisiteComponent(this, prerequisiteComponent);
		
		
		/// <summary>
		/// <para>Check whether the component class allows reregistration during ReregisterAllComponents </para>
		/// </summary>
		public bool AllowReregistration()
			=> E_UActorComponent_AllowReregistration(this);
		
		
		/// <summary>
		/// <para>Called by owner actor on position shifting </para>
		/// <para>Component should update all relevant data structures to reflect new actor location </para>
		/// <param name="InWorldOffset">Offset vector the actor shifted by </param>
		/// <param name="bWorldShift">Whether this call is part of whole world shifting </param>
		/// </summary>
		public virtual void ApplyWorldOffset(FVector inOffset, bool bWorldShift)
			=> E_UActorComponent_ApplyWorldOffset(this, inOffset, bWorldShift);
		
		
		/// <summary>
		/// <para>BeginsPlay for the component.  Occurs at level startup or actor spawn. This is before BeginPlay (Actor or Component). </para>
		/// <para>All Components (that want initialization) in the level will be Initialized on load before any </para>
		/// <para>Actor/Component gets BeginPlay. </para>
		/// <para>Requires component to be registered and initialized. </para>
		/// </summary>
		public virtual void BeginPlay()
			=> E_UActorComponent_BeginPlay(this);
		
		
		/// <summary>
		/// <para>Can this component potentially influence navigation </para>
		/// </summary>
		public bool CanEverAffectNavigation()
			=> E_UActorComponent_CanEverAffectNavigation(this);
		
		
		/// <summary>
		/// <para>If we belong to a world, clear the request to do a deferred update. </para>
		/// </summary>
		public void ClearNeedEndOfFrameUpdate()
			=> E_UActorComponent_ClearNeedEndOfFrameUpdate(this);
		
		
		/// <summary>
		/// <para>See if this component contains the supplied tag </para>
		/// </summary>
		public bool ComponentHasTag(string tag)
			=> E_UActorComponent_ComponentHasTag(this, tag);
		
		
		/// <summary>
		/// <para>See if this component is in the persistent level </para>
		/// </summary>
		public bool ComponentIsInPersistentLevel(bool bIncludeLevelStreamingPersistent)
			=> E_UActorComponent_ComponentIsInPersistentLevel(this, bIncludeLevelStreamingPersistent);
		
		
		/// <summary>
		/// <para>Create any physics engine information for this component </para>
		/// </summary>
		public void CreatePhysicsState()
			=> E_UActorComponent_CreatePhysicsState(this);
		
		
		/// <summary>
		/// <para>Used to create any rendering thread information for this component </para>
		/// <para>@warning This is called concurrently on multiple threads (but never the same component concurrently) </para>
		/// </summary>
		protected virtual void CreateRenderState_Concurrent()
			=> E_UActorComponent_CreateRenderState_Concurrent(this);
		
		
		/// <summary>
		/// <para>Deactivates the SceneComponent. </para>
		/// </summary>
		public virtual void Deactivate()
			=> E_UActorComponent_Deactivate(this);
		
		
		/// <summary>
		/// <para>Unregister the component, remove it from its outer Actor's Components array and mark for pending kill. </para>
		/// </summary>
		public virtual void DestroyComponent(bool bPromoteChildren)
			=> E_UActorComponent_DestroyComponent(this, bPromoteChildren);
		
		
		/// <summary>
		/// <para>Shut down any physics engine structure for this component </para>
		/// </summary>
		public void DestroyPhysicsState()
			=> E_UActorComponent_DestroyPhysicsState(this);
		
		
		/// <summary>
		/// <para>Used to shut down any rendering thread structure for this component </para>
		/// <para>@warning This is called concurrently on multiple threads (but never the same component concurrently) </para>
		/// </summary>
		protected virtual void DestroyRenderState_Concurrent()
			=> E_UActorComponent_DestroyRenderState_Concurrent(this);
		
		
		/// <summary>
		/// <para>Initializes the list of properties that are modified by the UserConstructionScript </para>
		/// </summary>
		public void DetermineUCSModifiedProperties()
			=> E_UActorComponent_DetermineUCSModifiedProperties(this);
		
